Fix title in HTTP

--- a/http/index.html
+++ b/http/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>APIs | by Tigran Sargsyan</title>
+	<title>HTTP | by Tigran Sargsyan</title>
 
 	<meta name="description" content="A slide show on HTTP (HTTPS), general information on how browser-server communication works" />
 	<meta name="author" content="Tigran Sargsyan" />
